--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -55,7 +55,9 @@ a.toggle-description-button {
 
 /*-------------------- Scroll Buttons --------------------*/
 
-
+.scroll-container {
+	text-align: center;
+}
 a.scroll-button {
 	/* !!! also, only show this with the horizontal gallery */
 	position: absolute;
@@ -81,12 +83,13 @@ a.scroll-button {
 	}
 
 	a.scroll-down {
+		text-align: center;
 		bottom: 0;
-		-webkit-transform: translateY(-36px);
-	    	-moz-transform: translateY(-36px);
-    		-ms-transform: translateY(-36px);
-    		-o-transform: translateY(-36px);
-			transform: translateY(-36px);
+		-webkit-transform: translateY(0px); // -36?
+	    	-moz-transform: translateY(0px);
+    		-ms-transform: translateY(0px);
+    		-o-transform: translateY(0px);
+			transform: translateY(0px);
 	}
 
 a.scroll-button span {
@@ -96,8 +99,8 @@ a.scroll-button span {
 	width: 24px;
 	height: 24px;
 	margin-left: -12px;
-	border-left: 1px solid white;
-	border-bottom: 1px solid white;
+	border-left: 2px solid purple;
+	border-bottom: 2px solid purple;
 
 	box-sizing: border-box;
 	    -webkit-transition: all .5s ease;
@@ -142,6 +145,76 @@ a.scroll-button:hover > span {
 	/* !!! background-color changes, but not "color".
 	find out what causes this line color */
 }
+
+
+
+/*----------- demo: CSS scroll down button -----------*/
+// http://codepen.io/nxworld/pen/OyRrGy
+
+#section07 a {
+	padding-top: 80px;
+}
+#section07 a span {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 14px;
+	height: 14px;
+	margin-left: -12px;
+	border-left: 2px solid purple;
+	border-bottom: 2px solid purple;
+	-webkit-transform: rotate(-45deg);
+	transform: rotate(-45deg);
+	-webkit-animation: sdb07 2s infinite;
+	animation: sdb07 2s infinite;
+	opacity: 0;
+	box-sizing: border-box;
+}
+#section07 a span:nth-of-type(1) {
+	-webkit-animation-delay: 0s;
+	animation-delay: 0s;
+}
+#section07 a span:nth-of-type(2) {
+	top: 16px;
+	-webkit-animation-delay: .15s;
+	animation-delay: .15s;
+}
+#section07 a span:nth-of-type(3) {
+	top: 32px;
+	-webkit-animation-delay: .3s;
+	animation-delay: .3s;
+}
+@-webkit-keyframes sdb07 {
+	0% {
+		opacity: 0;
+	}
+	50% {
+		opacity: 1;
+	}
+	100% {
+		opacity: 0;
+	}
+}
+@keyframes sdb07 {
+	0% {
+		opacity: 0;
+	}
+	50% {
+		opacity: 1;
+	}
+	100% {
+		opacity: 0;
+	}
+}
+
+
+/*----------- end scroll down button -----------*/
+
+
+
+
+
+
 
 
 
