--- a/css/style.css
+++ b/css/style.css
@@ -759,11 +759,7 @@ a.scroll-button {
   -moz-transform: translateY(-12px);
   -ms-transform: translateY(-12px);
   -o-transform: translateY(-12px);
-  transform: translateY(-12px);
-  width: 24px;
-  height: 24px;
-  padding: 30px;
-  background-color: rgba(1, 1, 1, 0.1); }
+  transform: translateY(-12px); }
 
 /* line 77, ../sass/components/_buttons.scss */
 a.scroll-left, a.scroll-right {
@@ -777,7 +773,6 @@ a.scroll-right {
 /* line 85, ../sass/components/_buttons.scss */
 a.scroll-down {
   text-align: center;
-  bottom: 0;
   -webkit-transform: translateY(0px);
   -moz-transform: translateY(0px);
   -ms-transform: translateY(0px);
