--- a/sass/components/_text.scss
+++ b/sass/components/_text.scss
@@ -4,7 +4,7 @@
 	width: 552px;
 	min-width: 232px;
 	max-width: 100%;
-	padding: 100px 12%;
+	padding: 50px 12% 0px;
 	margin-left: auto;
 	margin-right: auto; /* to center text */
 	text-align: left;
