--- a/css/photogrid_old.css
+++ b/css/photogrid_old.css
@@ -1,4 +1,4 @@
---------------------OLD photo_grid stuff--------------------
+/*--------------------OLD photo_grid stuff--------------------*/
 
 
 #photo_grid {
@@ -120,4 +120,3 @@
 }
 
 /*--------------------end photogrid container stuff--------------------*/
-
