--- a/sass/components/_index.scss
+++ b/sass/components/_index.scss
@@ -1,6 +1,7 @@
-@import "scroll-gallery";
 @import "containers";
 @import "text";
+@import "scroll-gallery";
+@import "isotope-portfolio-grid";
 @import "buttons";
 @import "contact";
 @import "processing";
