--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2,11 +2,24 @@
 CSS created by Florence Wong :);
 --------------------*/
 
-@import "settings/index"; // global variables, configuration switches, font loading
-//@import "tools/index"; // default mixins and functions, e.g. clearfix, page-nav-links, entypo-icons, bg-gradient
-//@import "general/index"; // ground-zero styles such as normalize, resets, box-sizing
-@import "elements/index"; // unclassed HTML elements: body, p, a
-@import "site/index"; // what's on every page: header, footer, etc.
-//@import "objects/index"; // cosmetic-free design patters: e.g. page-header, page-footer, woman-card
-@import "components/index"; // designed components, chunks of UI: e.g. jump, feature-section, feature-list, page-body, base-link
+@import "vendors/skeleton";
+
+// @import "abstracts/variables";
+@import "base/fonts";
+@import "base/typography";
+
+@import "layout/main";
+
+@import "site/header";
+@import "site/nav";
+@import "site/footer";
+
+@import "components/containers";
+@import "components/text";
+@import "components/scroll-gallery";
+@import "components/isotope-portfolio-grid";
+@import "components/buttons";
+@import "components/contact";
+@import "components/processing";
+
 @import "overrides/index"; // helpers and overrides (ideally empty)
